package pl.slvd.university.building;

public class Campus {
}
